# systems-programming-w-rust

./: .gitignore  README.md
hello/tests/: cli.rs
rbytes/: Cargo.toml
rbytes/src/: lib.rs  main.rs
rcat/: Cargo.toml
rcat/src/: lib.rs  main.rs
rcat/tests/: cli.rs
recho/: Cargo.toml
recho/src/: lib.rs  main.rs
recho/tests/: cli.rs
rhead/: Cargo.toml
rhead/src/: lib.rs  main.rs
rhead/tests/: cli.rs
runiq/: Cargo.toml
runiq/src/: lib.rs  main.rs
rwc/: Cargo.toml
rwc/src/: lib.rs  main.rs
rwc/tests/: cli.rs
